# video-knowledge-openai

./: .gitignore  Kubeflow_Tribal_Knowledge.ipynb  README.md  pyproject.toml  runner.py
components/create_knowledge_db/: Dockerfile  kfp_config.ini  runtime-requirements.txt
components/create_knowledge_db/component_metadata/: create_knowledge_db.yaml
components/process_videos/: Dockerfile  kfp_config.ini  runtime-requirements.txt
components/process_videos/component_metadata/: process_videos.yaml
components_images/: Dockerfile
mnt/: urls.txt
scripts/: build_components.sh
video_knowledge_openai/: pipeline.py
