[tool.poetry]
name = "video-knowledge-openai"
version = "0.1.0"
description = "Module that implements a pipeline that uses OpenAI's whisper and GPT-4 to solve QA questions about videos."
authors = ["David Cardozo <david.cardozo@me.com>"]
readme = "README.md"
packages = [{include = "video_knowledge_openai"}]

[tool.poetry.dependencies]
python = "^3.10"
kfp = {version = "2.0.0b13", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
google-cloud-aiplatform = "^1.23.0"


[tool.poetry.group.debug.dependencies]
notebook = "^6.5.4"


[tool.poetry.group.components.dependencies]
pytube = "12.1.3"
openai = "0.27.4"
tenacity = "8.2.2"
pinecone-client = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
